add auuki village

--- a/src/index.html
+++ b/src/index.html
@@ -297,13 +297,16 @@
                             <workout-graph class="workout--graph-cont" prop="workout" metric="ftp"></workout-graph>
                         </div>
 
-                        <div id="targets">
-                            <div class="targets--cont video-target">
-                                <div id="home-hero-video" class="home-hero">
-                                    <video class="home-hero--video"
-                                           src="about:blank"
-                                           autoplay
-                                           muted
+                            <div id="targets">
+                                <div class="targets--cont video-target">
+                                    <div id="video-csv-selector" class="video-csv-selector">
+                                        <!-- filled by watch.js -->
+                                    </div>
+                                    <div id="home-hero-video" class="home-hero">
+                                        <video class="home-hero--video"
+                                               src="about:blank"
+                                               autoplay
+                                               muted
                                            playsinline>
                                         Your browser does not support the video tag.
                                     </video>
